fixed word-wrap for binary example

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,6 +12,10 @@
     background-color: rgba(10, 255, 17, 0.432);
 }
 
+body {
+    word-wrap: break-word;
+}
+
 // h1 {
 //     font-size: 38px;
 // }
